css/styles.css
html, body {
    width: 100%;
    height: 100%;
}

body {
    font-family: "Montserrat", sans-serif;
    font-weight: bold;
    background-color: transparent;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    overflow: hidden;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.textBottom {
    position: absolute;
    bottom: 5px;
    right: 5px;
}

.clear {
    clear: both;
}

.rightText {
    text-align: right;
}

.backGroundColor {
}

.borderRadiusTopLeft {
    border-top-left-radius: 10px;
}

.borderRadiusTopRight {
    border-top-right-radius: 10px;
}

.borderRadiusBottomLeft {
    border-bottom-left-radius: 10px;
}

.borderRadiusBottomRight {
    border-bottom-right-radius: 10px;
}

/** bottom right **/
#songInfo {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    text-align: right;
    vertical-align: text-bottom;
    opacity: 1;
    transition: 1s all;
}

#songInfo.inactive {
    opacity: 0;
}

#beatMapCover {
    padding: 5px;
    float: right;
}

#cover {
    height: 150px;
    width: 150px;
    background-image: url("../img/tyGQRx5x_400x400.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

#infoText {
    float: left;
}

#previousBSRWrapper .line,
#infoText .line {
    padding: 3px 10px 3px 10px;
    width: fit-content;
    margin-left: auto;
    font-size: 18px;
    max-width: 520px;
}

#previousBSR {
    display: inline-block;
}

#mapName {
    font-size: 34px !important;
    height: 42px;
    max-width: 400px !important;
    overflow: hidden;
    padding-right: 5px;
}

#mapName #marquee {
    width: max-content;
    white-space: pre;
}

/** svgs **/
.roundBar {
    background: transparent;
    transform: rotate(-90deg);
}

.roundBar > circle {
    fill: transparent;
    stroke-linecap: round;
}

.roundBar .remaining {
    opacity: .25;
    stroke-width: 2px;
}

.roundBar .progress {
    stroke-width: 8px;
    transition: .2s all;
}

/** modifiers **/
#modifiers {
    position: absolute;
    text-align: right;
    right: 5px;
    bottom: 200px;
    font-size: 14px;
    transition: 1s all;
}

#modifiers.inactive {
    right: -250px;
}

#modifiers > div {
    padding: 5px;
    display: inline-block;
    width: fit-content;
}

/** down **/
#downSection {
    position: absolute;
    height: 90px;
    width: 500px;
    bottom: 5px;
    left: 50%;
    margin-left: -250px;
    transition: 1s all;
}

#downSection.inactive {
    bottom: -100px;
}

#downSection > div {
    float: left;
}

#downSection .holders {
    width: 230px;
}

#downSection .barHolder {
    width: 90px;
}

#downSection .holders .line {
    margin: 8px 0;
    font-size: 17px;
    line-height: 19px;
    text-align: center;
}

#downSection .holders .line#score {
    font-size: 24px;
}

#downSection .holders .line > div {
    display: inline-block;
    width: 60px;
    font-size: 14px;
}

#downSection .holders .line > div > span {
    font-size: 10px;
    margin-right: 10px;
}

#downSection .progressInfo {
    position: absolute;
    font-size: 14px;
    text-align: center;
    width: 90px;
    height: 90px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/** options **/
#options {
    position: absolute;
    top: 50%;
    left: 50%;
    padding: 10px;
}

#options input[type=checkbox] ~ label {
    cursor: pointer;
}

/** flip **/


#songInfo.flip {
    text-align: left;
}

#songInfo.flip .textBottom {
    right: inherit;
    left: 5px;
    width: 50%;
}
#songInfo.flip #previousBSRWrapper {
    width: 100%;
}

#songInfo.flip #beatMapCover {
    float: left;
    width: 150px;
}

#songInfo.flip #infoText .line {
    margin-left: inherit;
}

#modifiers.flip {
    right: inherit;
    left: 5px;
    text-align: left;
}

#modifiers.flip.inactive {
    left: -250px;
}

#downSection.flip {
    bottom: inherit;
    top: 5px;
}

#downSection.flip.inactive {
    top: -100px;
}

@media screen and (max-width: 1280px) {
    body {
        zoom: 75%;
    }
}

